<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.luteh.ecommerceexample.presentation.fragment.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/feedFragment"
        android:name="com.luteh.ecommerceexample.presentation.fragment.feed.FeedFragment"
        android:label="@string/feed"
        tools:layout="@layout/fragment_feed" />
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.luteh.ecommerceexample.presentation.fragment.cart.CartFragment"
        android:label="@string/cart"
        tools:layout="@layout/fragment_cart" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.luteh.ecommerceexample.presentation.fragment.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>