<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_loading_error_container"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/pb_loading_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <LinearLayout
        android:id="@+id/layout_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        tools:visibility="visible">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/img_error" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_error"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
            android:textColor="@color/title_message"
            android:textStyle="bold" />

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_medium__"
            android:gravity="center"
            android:text="@string/msg_error"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/label_message" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_error_retry"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_margin_large_"
            android:text="@string/label_retry"
            android:textColor="@color/blue_600"
            android:textSize="@dimen/text_medium_"
            app:cornerRadius="@dimen/corner_radius_xlarge"
            app:strokeColor="@color/blue_600" />

    </LinearLayout>

</RelativeLayout>